fixes checkTokenApi annotations and adds documentation
